fixed horizontal overflow
fixed horizontal overflow in the contact section, was buggy with the main bootstrap css.

--- a/css/main.css
+++ b/css/main.css
@@ -281,6 +281,10 @@ footer: #2b111f
     }
 }
 
+.contact-section .row {
+    margin: 0;
+}
+
 .contact-section {
     padding-top: 10rem;
 }
